# KipepeoAI

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  LICENSE  README.md  RELEASE_NOTES.md  release_notes_v2.0.md
.github/workflows/: android-build.yml  tests.yml
android/: CMakeLists.txt  README.md  build.gradle  gradle.properties  keystore.properties.example  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/kipepeo/app/: MainActivity.kt
android/app/src/main/java/com/kipepeo/app/calls/: CallViewModel.kt  CallsScreen.kt
android/app/src/main/java/com/kipepeo/app/health/: HealthScreen.kt  HealthViewModel.kt
android/app/src/main/java/com/kipepeo/app/learn/: LearnScreen.kt  LearnViewModel.kt
android/app/src/main/java/com/kipepeo/app/mesh/: MeshScreen.kt  MeshViewModel.kt
android/app/src/main/java/com/kipepeo/app/money/: MoneyScreen.kt  MoneyViewModel.kt
android/app/src/main/java/com/kipepeo/app/ui/: ChatScreen.kt  HomeScreen.kt  OnboardingScreen.kt  ViralFeatures.kt
android/app/src/main/java/com/kipepeo/app/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/java/com/kipepeo/app/viral/: ViralScreen.kt  ViralViewModel.kt
android/app/src/main/java/com/kipepeo/app/vision/: FarmerModeScreen.kt  ImageGenScreen.kt  TextbookModeScreen.kt  VisionScreen.kt  VisionViewModel.kt
android/app/src/main/java/com/kipepeo/app/zerodata/: ZeroDataScreen.kt
android/app/src/main/kotlin/ai/kipepeo/: KipepeoViewModel.kt  MainActivity.kt
android/app/src/main/kotlin/ai/kipepeo/native/: NativeBridge.kt
android/app/src/main/kotlin/ai/kipepeo/ui/: MainScreen.kt
android/app/src/main/kotlin/ai/kipepeo/ui/theme/: Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/kipepeo-ndk/: CMakeLists.txt  build.gradle
android/kipepeo-ndk/src/main/cpp/: data_tracker.cpp  data_tracker.h  hook_manager.cpp  hook_manager.h  jni_bridge.cpp  mediacodec_hooks.cpp  mediacodec_hooks.h  native_interface.cpp  native_interface.h
android/libkipepeo/: CMakeLists.txt  build.gradle
android/libkipepeo/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  native_interface.cpp  native_interface.h
android/libkipepeo/src/main/java/com/kipepeo/: KipepeoNative.java
android/magisk/: install.sh  module.prop  service.sh
cmake/: Android.cmake  FindDependencies.cmake
core/: CMakeLists.txt
core/include/kipepeo/: inference.h  video.h
core/kernels/: CMakeLists.txt
core/kernels/include/kipepeo/kernels/: chip_detection.h  kernel_dispatch.h  types.h
core/kernels/include/kipepeo/kernels/apple/: neon_apple.h
core/kernels/include/kipepeo/kernels/mediatek/: helio_g100.h  helio_g85.h  helio_g99.h  helio_optimizations.h
core/kernels/include/kipepeo/kernels/neon/: matrix_multiply.h  quantized_gemm.h  vector_ops.h
core/kernels/include/kipepeo/kernels/qualcomm/: snapdragon_7s_gen2.h  snapdragon_common.h
core/kernels/include/kipepeo/kernels/unisoc/: t606.h
core/kernels/metal/: ggml-metal.h  ggml-metal.m  ggml-metal.metal
core/kernels/src/: chip_detection.cpp  kernel_dispatch.cpp
core/kernels/src/apple/: neon_apple.cpp
core/kernels/src/mediatek/: helio_g100.cpp  helio_g85.cpp  helio_g99.cpp  helio_optimizations.cpp
core/kernels/src/neon/: matrix_multiply.cpp  quantized_gemm.cpp  vector_ops.cpp
core/kernels/src/qualcomm/: snapdragon_7s_gen2.cpp  snapdragon_common.cpp
core/kernels/src/unisoc/: t606.cpp
core/llm/: CMakeLists.txt
core/llm/include/kipepeo/llm/: llama_integration.h  llm_engine.h  model_switcher.h  types.h
core/llm/src/: inference.cpp  llama_integration.cpp  llm_engine.cpp  model_loader.cpp  model_switcher.cpp
core/quantization/: CMakeLists.txt
core/quantization/include/kipepeo/quantization/: africa_quant.h  hardware_detection.h  quantization_error.h  types.h
core/quantization/src/: africa_quant.cpp  hardware_detection.cpp  quantization_error.cpp  quantization_utils.cpp
core/src/education/: CMakeLists.txt  tutor_engine.cpp  tutor_engine.h
core/src/finance/: CMakeLists.txt  finance_engine.cpp  finance_engine.h
core/src/health/: CMakeLists.txt  health_engine.cpp  health_engine.h
core/src/mesh/: CMakeLists.txt  mesh_engine.cpp  mesh_engine.h
core/src/vision/: CMakeLists.txt  clip_model.cpp  clip_model.h  llava_model.cpp  llava_model.h  sd_model.cpp  sd_model.h  vision_engine.cpp  vision_engine.h
core/src/voice_call/: CMakeLists.txt  audio_codec.cpp  audio_codec.h  p2p_transport.cpp  p2p_transport.h  translator.cpp  translator.h  voice_engine.cpp  voice_engine.h  whisper_stream.cpp  whisper_stream.h
core/video/: CMakeLists.txt
core/video/include/kipepeo/video/: av1_decoder.h  av1_encoder.h  kip_mode_lowband.h  rate_control.h  rav1e_capi.h  rav1e_integration.h  types.h  video_compressor.h
core/video/ios/: video_toolbox_decoder.h  video_toolbox_decoder.mm
core/video/src/: av1_decoder.cpp  av1_encoder.cpp  kip_mode_lowband.cpp  rate_control.cpp  rav1e_integration.cpp  video_compressor.cpp
docs/: api_reference.md  architecture.md  build_instructions.md
ios/: CMakeLists.txt  README.md
ios/KipepeoApp/: ContentView.swift  Info.plist  Kipepeo.storekit  KipepeoApp.swift
ios/KipepeoApp/Mesh/: MeshManager.swift
ios/KipepeoApp/Views/: CallsView.swift  ChatView.swift  HomeView.swift  OnboardingView.swift
ios/KipepeoKit/: KipepeoKit.h  KipepeoManager.swift
ios/KipepeoKit/Interception/: AVPlayer+Kipepeo.swift  KipepeoResourceLoaderDelegate.swift  KipepeoURLProtocol.swift
ios/KipepeoKit/Tracking/: DataUsageTracker.swift
ios/fastlane/metadata/en-US/: description.txt
ios/fastlane/metadata/sw-KE/: description.txt
tests/: CMakeLists.txt
tests/integration/: README.md
tests/unit/: README.md
tools/: README.md  download_datasets.sh
tools/model-downloader/: README.md  download_models.py  models_config.json  requirements.txt
tools/quantization_training/: README.md
tools/testing/: README.md
